# WingmanKVM

./: .gitignore  Cargo.toml  LICENSE  README.md
deploy/: 99-wingmankvm.rules  gadget.env.example  install.sh  wingman.bash_profile  wingmankvm-gadget  wingmankvm-gadget.service  wingmankvm-set-wingman-password  wingmankvm-sudoers  wingmankvm.service
docs/: DEPLOYMENT.md  RK3399_GUIDE.md
src/: auth.rs  config.rs  main.rs  web.rs  web_ui.rs
src/devices/: discovery.rs  hid.rs  media.rs  mod.rs  power.rs  video.rs
